--- a/Poetry/src/main/resources/static/views/article-content.html
+++ b/Poetry/src/main/resources/static/views/article-content.html
@@ -1,24 +1,30 @@
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="stylesheet" href="/css/article-content.css" />
+</head>
+<body>
+	<div class="articles">
+		<div id="art-1" class="myArticle">
+			<div class="row-content">
+				<h2 id="art-i-title" class="art-title">Mehfil-e-Aaghaaz</h2>
+				<div id="art-i-time" class="art-time">Posted on Monday, 1 July 2019</div>
+			</div>
+			<div class="row-content col-sm-4">
+				<img id="art-i-img" class="art-img" src="/img/10.jpg">
+			</div>
+			<div class="row-content col-sm-8" style="display: block;">
+				<div id="art-i-content" class="art-content">Hello every one, this
+					is my first content which you are reading right now and I am the
+					only one who is responsible for this content to be published here
+					on this portal. Hello every one, this is my first content which you
+					are reading right now and I am the only one who is responsible for
+					this content to be published here on this portal.</div>
+				<button id="art-i-cont-read" class="btn btn-sm read-more-btn">Read
+					More....</button>
 
-<div class="articles">
-	<div id="art-1">
-		<div id="art-i-title" class="art-title">
-			Mehfil-e-Aaghaaz 
-			<button type="button" ><i id="art-i-like"	class="fa fa-heart art-title"
-				style="font-size: 13px; color: red; float: right;"></i></button>
+			</div>
 		</div>
-		
-		<div id="art-i-time" class="art-time">Monday, 1 July 2019</div>
-		
-		<div id="img-content">
-			<img id="art-i-img" class="art-img" src="/img/12.jpg">
-			
-			<div id="art-i-content" class="art-content">Hello every one,
-				this is my first content which you are reading right now and I am the
-				only one who is responsible for this content to be published here on
-				this portal. Hello every one, this is my first content which you are
-				reading right now and I am the only one who is responsible for this
-				content to be published here on this portal.</div>
-		</div>
-		<button id="art-i-cont-read" class="bt btn read-more-btn">Read More....</button>
 	</div>
-</div>
+</body>
+</html>
