--- a/Poetry/src/main/resources/static/views/index.html
+++ b/Poetry/src/main/resources/static/views/index.html
@@ -33,7 +33,6 @@
 			</form>
 		</div>
 		<div class="container-fluid text-center" id="myContainer">
-			<div class="row content">
 				<div class="col-sm-2">
 					<img id="authorImg" src="/img/author_img.jpg"
 						class="img-circle img-thumbnail">
@@ -45,21 +44,21 @@
 				</div>
 				<div class="col-sm-8" style="max-height: 960px;">
 					<!--Slider starts here  -->
-					<div class="row content">
+					<div class="row-content">
 						<div id="sliderhtml"></div>
 					</div>
 
-					<div id="contentDiv">
+					<div class="row-content">
+						<div id="contentDiv">
 												
+						</div>
 					</div>
-
 					<!--Slider ends here  -->
 				</div>
 				<div class="col-sm-2">
 					<img id="side-bar-img" src="/img/side_bar_quote.jpg"
 						style="height: auto; width: 160px;">
 				</div>
-			</div>
 		</div>
 		<footer class="text-center">
 			<i class="glyphicon glyphicon-copyright-mark"></i> <strong>CopyRight
