--- a/Poetry/src/main/resources/static/views/article-content.html
+++ b/Poetry/src/main/resources/static/views/article-content.html
@@ -5,15 +5,79 @@
 </head>
 <body>
 	<div class="articles">
-		<div id="art-1" class="myArticle">
+		<div id="art-1" class="container-fluid">
 			<div class="row-content">
 				<h2 id="art-i-title" class="art-title">Mehfil-e-Aaghaaz</h2>
 				<div id="art-i-time" class="art-time">Posted on Monday, 1 July 2019</div>
 			</div>
-			<div class="row-content col-sm-4">
+			
+			<div class="col-4 col-sm-4 col-lg-4">
 				<img id="art-i-img" class="art-img" src="/img/10.jpg">
 			</div>
-			<div class="row-content col-sm-8" style="display: block;">
+			<div class="col-8 col-sm-8 col-lg-8">
+				<div id="art-i-content" class="art-content">Hello every one, this
+					is my first content which you are reading right now and I am the
+					only one who is responsible for this content to be published here
+					on this portal. Hello every one, this is my first content which you
+					are reading right now and I am the only one who is responsible for
+					this content to be published here on this portal.</div>
+				<button id="art-i-cont-read" class="btn btn-sm read-more-btn">Read
+					More....</button>
+
+			</div>
+		</div>
+		<div id="art-1" class="container-fluid">
+			<div class="row-content">
+				<h2 id="art-i-title" class="art-title">Mehfil-e-Aaghaaz</h2>
+				<div id="art-i-time" class="art-time">Posted on Monday, 1 July 2019</div>
+			</div>
+			
+			<div class="col-4 col-sm-4 col-lg-4">
+				<img id="art-i-img" class="art-img" src="/img/10.jpg">
+			</div>
+			<div class="col-8 col-sm-8 col-lg-8">
+				<div id="art-i-content" class="art-content">Hello every one, this
+					is my first content which you are reading right now and I am the
+					only one who is responsible for this content to be published here
+					on this portal. Hello every one, this is my first content which you
+					are reading right now and I am the only one who is responsible for
+					this content to be published here on this portal.</div>
+				<button id="art-i-cont-read" class="btn btn-sm read-more-btn">Read
+					More....</button>
+
+			</div>
+		</div>
+		<div id="art-1" class="container-fluid">
+			<div class="row-content">
+				<h2 id="art-i-title" class="art-title">Mehfil-e-Aaghaaz</h2>
+				<div id="art-i-time" class="art-time">Posted on Monday, 1 July 2019</div>
+			</div>
+			
+			<div class="col-4 col-sm-4 col-lg-4">
+				<img id="art-i-img" class="art-img" src="/img/10.jpg">
+			</div>
+			<div class="col-8 col-sm-8 col-lg-8">
+				<div id="art-i-content" class="art-content">Hello every one, this
+					is my first content which you are reading right now and I am the
+					only one who is responsible for this content to be published here
+					on this portal. Hello every one, this is my first content which you
+					are reading right now and I am the only one who is responsible for
+					this content to be published here on this portal.</div>
+				<button id="art-i-cont-read" class="btn btn-sm read-more-btn">Read
+					More....</button>
+
+			</div>
+		</div>
+		<div id="art-1" class="container-fluid">
+			<div class="row-content">
+				<h2 id="art-i-title" class="art-title">Mehfil-e-Aaghaaz</h2>
+				<div id="art-i-time" class="art-time">Posted on Monday, 1 July 2019</div>
+			</div>
+			
+			<div class="col-4 col-sm-4 col-lg-4">
+				<img id="art-i-img" class="art-img" src="/img/10.jpg">
+			</div>
+			<div class="col-8 col-sm-8 col-lg-8">
 				<div id="art-i-content" class="art-content">Hello every one, this
 					is my first content which you are reading right now and I am the
 					only one who is responsible for this content to be published here
