--- a/Poetry/src/main/resources/static/views/index.html
+++ b/Poetry/src/main/resources/static/views/index.html
@@ -15,13 +15,12 @@
 
 <body>
 	<div class="container">
-		<div class="topnav">
-			<a class="active" href="#">HOME</a> <a href="#">ABOUT</a> <a href="#">GALLERY</a>
-			<a href="#">CONTACT US</a> <a href="#">SUBSCRIBE</a>
-
+		<div id="topnav">
+				<a class="active" href="#">HOME</a> <a href="#">ABOUT</a> <a href="#">GALLERY</a>
+				<a href="#">CONTACT US</a> <a href="#">SUBSCRIBE</a>
 			<form class="navbar-form navbar-right" action="#">
 				<div class="input-group"
-					style="max-width: 160px; margin-right: 18px;">
+					style="max-width: 170px; margin-right: 4px;">
 					<input type="text" class="form-control" placeholder="Search"
 						name="search">
 					<div class="input-group-btn">
@@ -33,16 +32,16 @@
 			</form>
 		</div>
 		<div class="container-fluid text-center" id="myContainer">
-				<div class="col-sm-2">
+				<div class="col-2 col-sm-2 col-lg-2" style="margin:10px 0 10px 0;">
 					<img id="authorImg" src="/img/author_img.jpg"
-						class="img-circle img-thumbnail">
-					<div class="side-btn-group">
+						class="img-circle img-thumbnail" style="margin:10px 0 10px 0;">
+					<div class="side-btn-group"  style="margin:10px 0 10px 0;">
 						<button>AUTHOR</button>
 						<button>ARCHIVE</button>
 						<button>SUBSCRIBE</button>
 					</div>
 				</div>
-				<div class="col-sm-8" style="max-height: 960px;">
+				<div class="col-8 col-sm-8 col-lg-8" style="max-height: 1800px;">
 					<!--Slider starts here  -->
 					<div class="row-content">
 						<div id="sliderhtml"></div>
@@ -55,9 +54,9 @@
 					</div>
 					<!--Slider ends here  -->
 				</div>
-				<div class="col-sm-2">
+				<div class="col-2 col-sm-2 col-lg-2" style="margin:10px 0 0 0;">
 					<img id="side-bar-img" src="/img/side_bar_quote.jpg"
-						style="height: auto; width: 160px;">
+						style="height:auto;width:165px;">
 				</div>
 		</div>
 		<footer class="text-center">
