--- a/Poetry/src/main/resources/static/css/pageStyle.css
+++ b/Poetry/src/main/resources/static/css/pageStyle.css
@@ -88,3 +88,13 @@ footer {
   background-color: #3e8e41;
   font-size: 13px;
 }
+
+#signupform{
+	width:100%;
+	height:100%;
+	display: block;
+	position: absolute;
+	top:0;
+	left:0;
+	z-index:10;
+}
