--- a/Poetry/src/main/resources/static/views/index.html
+++ b/Poetry/src/main/resources/static/views/index.html
@@ -10,15 +10,15 @@
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="/css/pageStyle.css" />
 <link rel="stylesheet" href="/css/signup.css">
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="/css/contact-us.css">
 </head>
 
 <body>
 	<div class="container" id="fullpage" style="position: relative;">
 		<div id="topnav">
 			<a class="active" href="#">HOME</a> <a href="#">ABOUT</a> <a href="#">GALLERY</a>
-			<a href="#">CONTACT US</a> <a href="javascript:void(0);" class="sign-anchor">SUBSCRIBE</a>
+			<a href="javascript:void(0);" class="contact-us">CONTACT US</a> <a
+				href="javascript:void(0);" class="sign-anchor">SUBSCRIBE</a>
 			<form class="navbar-form navbar-right" action="#">
 				<div class="input-group"
 					style="max-width: 155px; margin-right: 30px;">
@@ -34,15 +34,16 @@
 		</div>
 		<div class="container-fluid text-center" id="myContainer">
 			<div class="col-2 col-sm-2 col-lg-2" style="margin: 10px 0 10px 0;">
-				<img id="authorImg" src="/img/author_img.jpg"
-					class="img-circle img-thumbnail" style="margin: 10px 0 10px 0;">
+				<img id="authorImg" title="Manoj Chhapariya"
+					src="/img/author_img.jpg" class="img-circle img-thumbnail"
+					style="margin: 10px 0 10px 0;">
 				<div class="side-btn-group" style="margin: 10px 0 10px 0;">
 					<button>AUTHOR</button>
 					<button>ARCHIVE</button>
 					<button class="sign-anchor">SUBSCRIBE</button>
 				</div>
 			</div>
-			<div class="col-8 col-sm-8 col-lg-8 text-center"
+			<div class="col-8 col-sm-8 col-lg-8 text-center" id="middle"
 				style="max-height: 1800px; overflow: hidden;">
 				<!--Slider starts here  -->
 				<div class="row-content">
@@ -65,7 +66,7 @@
 				- MRHamsafar</strong>
 		</footer>
 	</div>
-	<div class="container-fluid"  id="signupform">
+	<div class="container-fluid" id="signupform" style="display: none;">
 		<div>
 			<span class="close" title="Cancel Form">&times;</span>
 		</div>
@@ -146,11 +147,36 @@
 		</div>
 	</div>
 	<!-- /form -->
+	<!-- Contact us start -->
+	<div class="container-fluid" id="contact-div" style="display: none;">
+		<div>
+			<span class="close" title="Cancel Form">&times;</span>
+		</div>
+
+		<div class="contact-form">
+			<div class="form-group">
+				<h4
+					style="text-align: center; margin-bottom: 20px; margin-top: auto; color: #F1781F;">
+					We would love to hear from you !</h4>
+				<input type="text" class="form-control fields" id="fname"
+					placeholder="Enter First Name" name="fname"> <input
+					type="text" class="form-control fields" id="lname"
+					placeholder="Enter Last Name" name="lname"> <input
+					type="email" class="form-control fields" id="email"
+					placeholder="Enter email" name="email">
+				<textarea class="form-control fields" rows="5"
+					placeholder="Enter your comments" id="comment"></textarea>
+				<button type="submit" class="btn btn-default fields"
+					style="padding-top: 10px;">Submit</button>
+			</div>
+		</div>
+	</div>
+	<!-- Contact us end -->
 </body>
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script
-	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="/js/main.js"></script>
 <script src="/js/signup.js"></script>
 </html>
